--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@ body {
     font-size: 18px;
     font-style: normal;
     transition: all 0.1s ease-out;
-    
 }
 .flex {
     display: flex;
@@ -230,8 +229,15 @@ a{
 .item{
     max-height: 100px;
 }
-.s {
+.item-cart {
     align-items: center;
     display: grid;
     grid-template-columns: 1fr 3fr;
+}
+.table-col{
+    width: 20%;
+    text-align: center;
+}
+.mid{
+    vertical-align: middle;
 }
